--- a/anchorNav.html
+++ b/anchorNav.html
@@ -8,7 +8,7 @@
     <script src="https://lc.dbazure.cn/dbfx/dbfx.data.js"></script>
     <script src="https://lc.dbazure.cn/dbfx/dbfx.commodel.js"></script>
     <script src="https://lc.dbazure.cn/dbfxui/dbfx.web.controls.js"></script>
-    <!--<link rel="stylesheet" href="pagination.css">-->
+    <link rel="stylesheet" href="anchorNav.css">
     <script src="anchorNav.js"></script>
 </head>
 <body>
